Pagina de apps terminada

--- a/Css/Inicio.css
+++ b/Css/Inicio.css
@@ -1,7 +1,7 @@
 #cosablanca {
   border: 1px solid #E2E2E2;
   border-radius: 1.25rem;
-  background-color: #ff8552;
+  background-color: #000000;
   display: flex;
   position: relative;
 }
