--- a/Css/menu.css
+++ b/Css/menu.css
@@ -59,7 +59,7 @@ a {
 }
 
 .cta_tarjeta-rest {
-  background-color: #FFC300;
+  background-color: #7b6ad0;
   padding: .25rem 1rem;
   border-radius: 4px;
 }
