--- a/Css/barra.css
+++ b/Css/barra.css
@@ -6,10 +6,10 @@
     --color-texto: rgb(0, 0, 0);
     --color-texto-menu: rgb(134, 136, 144);
 
-    --color-menu-hover: rgb(255, 202, 144);
+    --color-menu-hover: rgb(152, 153, 226);
     --color-menu-hover-texto: rgb(0, 0, 0);
 
-    --color-boton: #ff8552;
+    --color-boton: #8581dc;
     --color-boton-texto: rgb(255, 255, 255);
 
     --color-linea: rgb(180, 180, 180);
