--- a/Css/Login.css
+++ b/Css/Login.css
@@ -1,6 +1,6 @@
 body {
     /* Establece la imagen de fondo */
-    background-image: url('../Img/Diseño\ sin\ título\ \(1\).png');
+    background-image: url('../Img/FondoNike2.jpg');
     
     /* Ajusta cómo se muestra la imagen */
     background-size: cover; /* Cubre toda la pantalla */
