--- a/Css/Inicio.css
+++ b/Css/Inicio.css
@@ -70,7 +70,7 @@
   padding-right: 5%;
   border: 1px #000000;
   border-radius: 1.25rem;
-  background-color: #ffca90;
+  background-color: #a890ff;
   position: relative;
   
 }
@@ -115,7 +115,7 @@ a {
   border-radius: 10px;
 }
 .footer {
-  background-color: #ff8552;
+  background-color: #8352ff;
   padding: 20px;
   color: white;
   text-align: center;
